# Dev_DM3730

./: CMakeLists.txt  CMakePresets.json  MyDM3730Toolchain22.cmake  MyDM3730Toolchain23.cmake  README.md
MyProgram1/: CMakeLists.txt  my_install.bat
MyProgram2/: CMakeLists.txt
MyProgram3/: CMakeLists.txt
MyStaticLib/: CMakeLists.txt  MyFunction1.cpp  MyFunction1.h
zzzMacros/: MyCodeMacros.cmake  MyLocalImports.cmake  MySpecial.cmake
